[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawpack-batch"
version = "2.0.0"
description = "Utilities for running Clawpack/GeoClaw batch jobs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# No hard dependencies — clawpack is assumed to be present in the environment.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]
lint = [
    "ruff",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# from __future__ import annotations is intentional for forward reference support;
# silence the pyupgrade rule that would remove it on Python >= 3.10.
ignore = ["UP015"]

[tool.hatch.build.targets.wheel]
packages = ["batch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests that actually run the solver require a Clawpack install; mark them
# so they can be skipped in CI that only has a Python environment.
markers = [
    "integration: requires a compiled Clawpack executable",
]
